# internal/web/swagger/openapi.yaml
@@ -3022,10 +3022,6 @@ paths:
                   type: array
                   items:
                     type: string
-                ignorePatterns:
-                  type: array
-                  items:
-                    type: string
                 startPaused:
                   type: boolean
                 skipIfExists:
@@ -4519,10 +4515,6 @@ components:
           type: array
           items:
             type: string
-        ignorePatterns:
-          type: array
-          items:
-            type: string
         targetInstanceIds:
           type: array
           items:
@@ -4601,10 +4593,6 @@ components:
           type: string
           nullable: true
         tags:
-          type: array
-          items:
-            type: string
-        ignorePatterns:
           type: array
           items:
             type: string
